@@ -1372,6 +1372,10 @@ Opencv_Init(Tcl_Interp *interp)
         (Tcl_ObjCmdProc *) convexHull,
         (ClientData)cvd, (Tcl_CmdDeleteProc *)NULL);
 
+    Tcl_CreateObjCommand(interp, "::" NS "::convexityDefects",
+        (Tcl_ObjCmdProc *) convexityDefects,
+        (ClientData)cvd, (Tcl_CmdDeleteProc *)NULL);
+
     Tcl_CreateObjCommand(interp, "::" NS "::pointPolygonTest",
         (Tcl_ObjCmdProc *) pointPolygonTest,
         (ClientData)cvd, (Tcl_CmdDeleteProc *)NULL);
